Fixed display/alignment issues

--- a/client/blocks/author-compact-profile/style.scss
+++ b/client/blocks/author-compact-profile/style.scss
@@ -2,6 +2,7 @@
 	font-size: 14px;
 	display: flex;
 	flex-direction: column;
+	width: 100%;
 
 	.gravatar, .site-icon {
 		margin: auto;
