--- a/client/blocks/reader-full-post/style.scss
+++ b/client/blocks/reader-full-post/style.scss
@@ -97,10 +97,32 @@
 	@include breakpoint( "<660px" ) {
 		flex-direction: row;
 		margin-top: 20px;
-		margin-bottom: 20px;
 
 		.reader-avatar {
 			flex: 1;
+			margin-bottom: 40px;
+
+			&.has-gravatar {
+
+				.gravatar {
+					height: 32px!important;
+					width: 32px!important;
+				}
+			}
+
+			&.has-site-and-author-icon.has-site-icon.has-gravatar {
+				margin-bottom: 20px;
+
+				.gravatar {
+					height: 24px!important;
+					margin-right: 1em;
+					position: relative;
+						left: 18px;
+						top: -18px;
+					vertical-align: bottom;
+					width: 24px!important;
+				}
+			}
 
 			.site-icon {
 				height: 32px!important;
@@ -120,16 +142,6 @@
 			}
 		}
 
-		.gravatar {
-			height: 24px!important;
-			margin-right: 1em;
-			position: relative;
-				left: 18px;
-				top: -18px;
-			vertical-align: bottom;
-			width: 24px!important;
-		}
-
 		.reader-author-link {
 			font-weight: 700;
 			display: inline;
@@ -137,7 +149,7 @@
 
 		.reader-author-link,
 		.author-compact-profile__site-link {
-			margin: 0 0 0 1em;
+			margin: 0 0 0 10px;
 			padding-top: 5px;
 		}
 
@@ -186,6 +198,7 @@
 
 .reader-full-post__sidebar .comment-button {
 	margin-right: 18px;
+
 	@include breakpoint( "<660px" ) {
 		position: fixed;
 			top: 10px;
